--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   },
   "homepage": "https://github.com/EverlyWell/hackathon-dashboards#readme",
   "dependencies": {
+    "chart.js": "^2.7.3",
     "express": "^4.16.4",
+    "googleapis": "^36.0.0",
+    "moment": "^2.22.2",
+    "mongoose": "^5.3.15",
     "node-rest-client": "^3.1.0"
   },
   "devDependencies": {
