--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "googleapis": "^36.0.0",
     "moment": "^2.22.2",
     "mongoose": "^5.3.15",
-    "node-rest-client": "^3.1.0"
+    "node-rest-client": "^3.1.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^1.18.7"
